[package]
name = "ironds-romtool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = { version = "0.2", optional = true }
elf = "0.7"

[dev-dependencies]
tempfile = "3"

[features]
build-binary = ["getopts"]

# This means it must be run as "cargo run --features build-binary"
# Could be cleaned up if https://github.com/rust-lang/rfcs/pull/3374 is added.
[[bin]]
name = "ironds-romtool"
required-features = ["build-binary"]
